# CoVAPSy

./: .gitignore  README.md  UV_USAGE.md  pyproject.toml
Simulateur/: CNN1DResNetExtractor.py  DynamicActionPlotCallback.py  TemporalResNetExtractor.py  config.py  launch_train_multiprocessing.py  model_tester.py  onnx_utils.py
Simulateur/controllers/controllerVehicleDriver/: controllerVehicleDriver.py
Simulateur/controllers/controllerWorldInit/: controllerWorldInit.py
Simulateur/controllers/controllerWorldSupervisor/: checkpoint.py  controllerWorldSupervisor.py
Simulateur/controllers/controller_violet/: controller_violet.py
docs/Hardware/3D_model/: Gear 70T.stl  Panier V4.2.stl  Plaque troué.dxf  info.md
scripts/: Live_display_lidar.py  autotech_install_partie_test.py  autotech_install_party.py  commande_PS4.py  envoie_camera_sur_web.py  lanch_one_simu.py  launch_train_multiprocessing.py  masterI2C.py  remote_control_controller.py  startup.sh
scripts/bluethoot_auto/: bluethootconnect.sh
scripts/bluetooth_auto/: bluethoot_mac.txt  bluethootconnect.sh
src/HL/: Autotech_constant.py  Camera.py  Camera_serv.py  Car.py  Driver.py  Poweroff.py  RemoteControl.py  Serveur.py  Serveur_mq.py  SshProgramme.py  backend.py  main.py  masterI2C.py  modelTemporal1.onnx  model_CNN1D.onnx  model_RSNET2D.onnx  module_initialisation.py  programme.py  test_serveur.py
src/HL/Vision/: Imagestream.py
src/HL/actionneur_capteur/: Camera.py  Lidar.py  ToF.py  masterI2C.py
src/HL/programme/: Camera_serv.py  Car.py  Driver.py  Poweroff.py  RemoteControl.py  SshProgramme.py  module_initialisation.py  programme.py
src/HL/programme/scripts/: Driver.py
src/HL/site_controle/: app.js  controle.html  index.html  lidar.html  style.css  webapp.py
src/LL/Asserv2bazar/: Asserv2bazar.ino  n_lithium.ino  n_moteur.ino
src/Simulateur/: WebotsSimulationGymEnvironment.py  config.py  inverser_couleurs.py  launch_one_simu.py  launch_train_multiprocessing.py  onnx_utils.py
src/Simulateur/controllers/controllerVehicleDriver/: controllerVehicleDriver.py
src/Simulateur/controllers/controllerWorldSupervisor/: checkpointmanager.py  controllerWorldSupervisor.py
src/Simulateur/worlds/: .piste0.wbproj  .piste1.wbproj  .piste2.wbproj  piste2.wbt  piste3.wbt
src/high_level/: pyproject.toml
src/high_level/models/: model_CNN1DExtractor.onnx
src/high_level/scripts/: Live_display_lidar.py  Simple.py  ToF_print_VL53L1X.py  displayvoltage.py  launch_serveur.py  live_display_lidar.py  min_lidar.py  onetime_lidar.py  read_spi.py  remote_control_controller.py  sender.py  setup.sh  simple.py  startup.sh  strream_camera_on_web.py  tof_print_vl53l1x.py
src/high_level/scripts/animation/: gen_animation.py  gif_animate.py  png_display.py
src/high_level/scripts/systemctl/: autotech_init.service  mediamtx_start.service
src/high_level/scripts/vision/: Cam.py  Imagestream.py  analyse_image.py  cam.py  imagestream.py
src/high_level/src/actionneur_capteur/: __init__.py  camera.py  lidar.py  masterI2C.py  master_i2c.py  tof.py
src/high_level/src/driver/: __init__.py
src/high_level/src/drivers/: camera.py  lidar.py  master_i2c.py  tof.py
src/high_level/src/high_level/: __init__.py  autotech_constant.py  backend.py  server.py  serveur.py
src/high_level/src/programs/: __init__.py  camera_proxy.py  camera_serv.py  car.py  initialisation.py  initialization.py  libuved  poweroff.py  program.py  ps4_controller_program.py  remote_control.py  ssh_program.py  ssh_programme.py  test_recule.py
src/high_level/src/programs/utils/: __init__.py  driver.py  ssh.py
src/high_level/src/site_controle/: app.js  index.html  lidar.html  style.css
src/low_level/scripts/: tune_pwm_direction.py  tune_pwm_propulsion.py
src/low_level/src/Asserv2bazar/: Asserv2bazar.ino
src/simulation/: pyproject.toml
src/simulation/scripts/: lanch_one_simu.py  launch_one_simu.py  launch_train_multiprocessing.py
src/simulation/src/extractors/: __init__.py  cnn_1d_extractor.py  cnn_1d_resnet_extractor.py  cnn_1d_resnet_no_cam_extractor.py  temporal_resnet_extractor.py
src/simulation/src/simulation/: __init__.py  config.py  vehicle_env.py
src/simulation/src/utils/: __init__.py  onnx_utils.py  plot_model_io.py  simulation_rank.py
src/simulation/src/webots/: __init__.py
src/simulation/src/webots/controllers/controller_jaune/: controller_jaune.py
src/simulation/src/webots/controllers/controller_vehicle_driver/: controller_vehicle_driver.py
src/simulation/src/webots/controllers/controller_violet/: controller_violet.py
src/simulation/src/webots/controllers/controller_world_init/: controller_world_init.py
src/simulation/src/webots/controllers/controller_world_supervisor/: __init__.py  checkpoint.py  checkpoint_manager.py  controller_world_supervisor.py
src/simulation/src/webots/worlds/: [DEPRECATED]piste.wbt  piste0.wbt  piste1.wbt
