[project]
name = "Autotech"
version = "0.1.0"
description = "Participation de INTech à CoVAPSy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Arnaud Costermans", email = "arnaud.costermans@intech-robotics.fr" },
    { name = "Matthias Bienvenu", email = "matthias.bienvenu@intech-robotics.fr" },
    { name = "Alexandre Naizondard", email = "alexandre.naizondard@telecom-sudparis.eu" },
    { name = "Antonin Fruchet", email = "antonin.fruchet@telecom-sudparis.eu" },

    { name = "Cyril Bampeta", email = "cyril.bampeta@intech-robotics.fr" },
]

dependencies = [
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0",
    "mkdocs-git-authors-plugin>=0.6.0",
]
simu = [
    # Core scientific computing and data processing
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",

    # Machine learning and AI
    "onnx>=1.8.0",
    "onnxruntime>=1.8.0",
    "torch>=1.9.0",
    "stable-baselines3>=1.6.0",
    
    # Used in the controller
    "psutil[simu]>=7.1.3",
]
rpi = [
    # Note: picamera2 causes UV to auto-include rpi extras even when not requested
    # This is likely a UV bug. Add back when needed:
    # "picamera2>=0.3.0",

    # AI Inference
    "onnxruntime>=1.8.0",

    # Raspberry Pi specific hardware control
    "rpi-hardware-pwm>=0.1.0",
    "RPi.GPIO>=0.7.1",
    "gpiozero>=1.6.0",

    # I2C and SPI communication (Linux specific)
    "smbus>=1.1.post2",
    "spidev>=3.5",

    # OLED display support
    "luma.oled>=3.8.0",
    "luma.core>=2.3.0",
    "Adafruit-SSD1306>=1.6.0",

    # Time-of-Flight sensor support
    "adafruit-circuitpython-vl53l0x>=3.6.0",
    "adafruit-blinka>=8.0.0",

    # PS4 controller support
    "pyPS4Controller>=1.2.0",
]
