[project]
name = "autotech"
version = "0.1.0"
description = "INTech participation to CoVAPSy"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    # 2025 team
    { name = "Arnaud Costermans", email = "arnaud.costermans@intech-robotics.fr" },
    { name = "Matthias Bienvenu", email = "matthias.bienvenu@intech-robotics.fr" },
    { name = "Alexandre Naizondard", email = "alexandre.naizondard@telecom-sudparis.eu" },
    { name = "Antonin Fruchet", email = "antonin.fruchet@telecom-sudparis.eu" },
    { name = "Mark Kirov", email = "mark.kirov@telecom-sudparis.eu" },

    # 2026 team
    { name = "Cyril Bampeta", email = "cyril.bampeta@intech-robotics.fr" },
    { name = "Robinson Cerceau", email = "robinson.cerceau@intech-robotics.fr" },
    { name = "Nikopol Markgraf", email = "nikopol.markgra@intech-robotics.fr" },
    { name = "Nachid Raslane", email = "nachid.raslane@intech-robotics.fr" },
    { name = "Arthur Ripoll", email = "arthur.ripoll@intech-robotics.fr" },
    { name = "Mohamed Benabadji", email = "mohamed.benabadji@intech-robotics.fr" },
]

[tool.uv.workspace]
members = ["src/high_level", "src/simulation"]
