[project]
name = "high-level"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "matthiasbienvenu", email = "matthias.bienvenu@telecom-sudparis.eu" }
]
requires-python = ">=3.12, <3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
