[project]
name = "simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "matthiasbienvenu", email = "matthias.bienvenu@telecom-sudparis.eu" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "psutil>=7.2.1",
    "stable-baselines3[extra]>=2.7.1",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
